# Faster-ChatterBox-OpenAPI

./: Dockerfile  pyproject.toml  server.py
