[project]
name = "FasterChatterBoxOpenAPI"
version = "0.4.4"
requires-python = ">=3.10"
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy",
    "resampy==0.4.3",
    "librosa", # ==0.10.0
    "s3tokenizer",
    "torch", # ==2.6.0
    "torchaudio", # ==2.6.0
    "transformers", # ==4.46.3
    "diffusers", # ==0.29.0
    "resemble-perth==1.0.1",
    "omegaconf", # ==2.3.0 might now be unnecessary
    "conformer",
    "safetensors",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "setuptools>=80.9.0",
    "torchcodec>=0.8.1",
    "soundfile>=0.13.1",
    "tts-webui-chatterbox-tts",
]

[tool.uv.sources]
tts-webui-chatterbox-tts = { git = "https://github.com/rsxdalv/chatterbox.git", rev = "faster" }
